upd profile pic

--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,11 @@ h1 {
 }
 
 .profile-image {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    width: 220px;
+    height: 220px;
+    /* border-radius: 50%; */
     object-fit: cover;
-    border: 3px solid var(--divider);
+    /* border: 3px solid var(--divider); */
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     flex-shrink: 0;
 }
